etl-api/tests/snapshots/main__pipelines__an_existing_pipeline_can_be_updated.snap
---
source: etl-api/tests/pipelines.rs
expression: response.config
---
FullApiPipelineConfig {
    publication_name: "updated_publication",
    batch: Some(
        BatchConfig {
            max_fill_ms: 10,
            memory_budget_ratio: 0.2,
        },
    ),
    table_error_retry_delay_ms: Some(
        20000,
    ),
    table_error_retry_max_attempts: Some(
        10,
    ),
    max_table_sync_workers: Some(
        4,
    ),
    max_copy_connections_per_table: Some(
        8,
    ),
    memory_refresh_interval_ms: Some(
        100,
    ),
    memory_backpressure: Some(
        MemoryBackpressureConfig {
            activate_threshold: 0.85,
            resume_threshold: 0.75,
        },
    ),
    table_sync_copy: Some(
        IncludeAllTables,
    ),
    invalidated_slot_behavior: Some(
        Error,
    ),
    replicator_resources: None,
    log_level: Some(
        Info,
    ),
}
