etl-api/tests/snapshots/main__pipelines__pipeline_config_can_be_updated-4.snap
---
source: etl-api/tests/pipelines.rs
expression: response.config
---
FullApiPipelineConfig {
    publication_name: "publication",
    batch: Some(
        BatchConfig {
            max_size: Some(
                10000,
            ),
            max_fill_ms: 100,
        },
    ),
    table_error_retry_delay_ms: Some(
        20000,
    ),
    table_error_retry_max_attempts: Some(
        12,
    ),
    max_table_sync_workers: Some(
        8,
    ),
    table_sync_copy: Some(
        IncludeAllTables,
    ),
    invalidated_slot_behavior: Some(
        Error,
    ),
    log_level: None,
}
